---------------------------------------------------------------------------------------------------
Version: 2.13.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.13.1
Date: 2026-02-01
  Bugfixes:
    - Fixed that entities with only item request changes at a stage were excluded from blueprints when using stage limit or "exclude from future blueprints".
---------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: 2026-01-26
  Features:
    - Added "Resync with world" action that reads actual world state into the project, useful for recovering from desync issues.
---------------------------------------------------------------------------------------------------
Version: 2.12.1
Date: 2025-11-30
  Fixes:
    - Fixed that pasting an assembler with modules would break module requests.
---------------------------------------------------------------------------------------------------
Version: 2.12.0
Date: 2025-11-29
  Features:
    - Added blueprint setting: "Custom blueprint name" to use something other than the stage's name.
    - Added icon selector to renaming UI.
---------------------------------------------------------------------------------------------------
Version: 2.11.1
Date: 2025-11-29
  Changes:
    - "Reset space platform tiles" will no longer try to connect ghosted tiles
---------------------------------------------------------------------------------------------------
Version: 2.11.0
Date: 2025-11-29
  Features:
    - Tile changes now stop propagating to further stages when blocked by an entity, preventing invalid tile configurations on space platforms.
    - Added "Reset space platforms tiles" action, that places minimal space platform tiles using a heuristic algorithm.
---------------------------------------------------------------------------------------------------
Version: 2.10.7
Date: 2025-11-25